# zkp-chaum-pedersen_in_rust

./: Cargo.toml  Dockerfile  README.md
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs
