[package]
name    = "zkp_chaum_pedersen"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8" # For random number generation

num-bigint = { version = "0.4", features = [
    "rand",
] } # For big integer operations // rand feature is needed for random number generation
hex = "0.4.3"
tonic = "0.9"
prost = "0.11"

tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
] } # async rust runtime

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[lib]
path = "src/lib.rs"
